--- a/src/main/java/Gui.form
+++ b/src/main/java/Gui.form
@@ -167,6 +167,14 @@
               <text value="no connected"/>
             </properties>
           </component>
+          <component id="e76c6" class="javax.swing.JCheckBox" binding="HEXDisplayCheckBox" default-binding="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="HEX display"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
